Index and about us pages not properly linked, and i dont think the stylesheet is either. Need to add a mission statement and warranty page as well. Index page is just a super rough sketch and the about us page is an even rougher sketch. Stylesheet is just for the navbar so far. Body Element is empty for now. Make changes as needed.

--- a/Asterope Stylesheet.css
+++ b/Asterope Stylesheet.css
@@ -19,5 +19,14 @@ nav#top ul li {
 }
 
 nav#top ul li a {
-    color:
+    color: white;
+    display: block;
+    font-size: 1.2em;
+    text-align: center;
+    padding: 50% 0%;
+}
+
+nav#top ul li a:hover, canvas#top ul li a:active {
+    color: rgb(255, 0, 0);
+    text-shadow: 0px 0px 2px black, 0px 0px 15px white;
 }
