--- a/css/style.css
+++ b/css/style.css
@@ -1376,6 +1376,8 @@ nav.main-menu {
 	z-index: 5;
 }
 
+
+
 .swiper-container {
 	width: 100%;
 	height: 100%;
@@ -1762,6 +1764,10 @@ input[type="radio"] .styled:checked+label::after {
 	margin: 0 auto;
 	margin-bottom: 0px;
 	margin-bottom: 20px;
+}
+
+.infomercial {
+
 }
 
 .about .img-box {
